# mist

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
Resources/: recolor_seafoam.py
Source/: MistLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: MistDriver.h
Tests/: test_main.cpp
